--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cloudinary": "^1.41.3",
+    "cloudinary-core": "^2.13.1",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^19.0.0",
