--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "cloudinary": "^1.41.3",
     "cra-template": "1.2.0",
+    "express-validator": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^19.0.0",
